# pd-target-identification

./: .gitignore  ADDING_NEW_EVIDENCE_SOURCES.md  README.md  gwas_episodes_output.json  mcp_test_configs.yaml  pyproject.toml  research_queries.cypher  setup.cfg  setup.py  test_pubmed_resource.py
config/: episode_types.yaml
src/: dagster.yaml  pyproject.toml
src/pd_target_identification/: definitions.py  definitions_new.py
src/pd_target_identification/defs/: __init__.py
src/pd_target_identification/defs/ingestion/: __init__.py
src/pd_target_identification/defs/ingestion/expression/: __init__.py  assets.py  test_gtex_endpoints.py
src/pd_target_identification/defs/ingestion/gene_mapping/: __init__.py  assets.py
src/pd_target_identification/defs/ingestion/gwas/: __init__.py  assets.py
src/pd_target_identification/defs/ingestion/literature/: __init__.py  assets.py
src/pd_target_identification/defs/ingestion/pathways/: __init__.py  assets.py
src/pd_target_identification/defs/ingestion/single_cell/: __init__.py  assets.py
src/pd_target_identification/defs/integration/: __init__.py  assets.py  enhanced_scoring.py
src/pd_target_identification/defs/knowledge_graph/: __init__.py  assets.py  census_episodes.py  entity_types.py  episode_generators.py  episode_templates.py  graph_schema.py  mcp_assets.py  pathway_utilities.py  schema_constants.py  schema_utilities.py  schema_validation.py  validation_queries.py
src/pd_target_identification/defs/schedules/: __init__.py
src/pd_target_identification/defs/shared/: __init__.py  census_resource.py  configs.py  episode_config.py  episode_config_yaml.py  expected_behaviors.py  group_config.py  io_managers.py  resources.py
src/pd_target_identification/tests/: test_episode_generators.py  test_pubmed_resource.py
