[project]
name = "pd_target_identification"
version = "0.1.0"
description = "Parkinson's Disease Target Identification Pipeline"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-cloud",
    "pandas",
    "requests",
    "bioservices",
    "networkx",
    "pydantic",
    "graphiti-core",
    "fastmcp>=2.10.6",
    "mcp>=1.12.2",
    "python-dotenv",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "duckdb>=1.3.2",
    "azure-identity>=1.23.1",
    "httpx>=0.28.1",
    "llvmlite>=0.44.0",
    "numba>=0.60.0",
    "numpy>=1.24.0",
    "cellxgene-census>=1.17.0",
    "psutil>=7.0.0",
]
[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "black",
    "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pd_target_identification.definitions"
code_location_name = "pd_target_identification"

[tool.setuptools.packages.find]
exclude=["pd_target_identification_tests"]
